--- a/7.3/jest/package.json
+++ b/7.3/jest/package.json
@@ -4,7 +4,8 @@
   "description": "jest test",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "cover": "jest --collectCoverage"
   },
   "keywords": [
     "jest",
@@ -14,6 +15,9 @@
   "author": "omelnikova",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.5.1"
+  },
+  "directories": {
+    "test": "test"
   }
 }
