--- a/7.3/playwright/package.json
+++ b/7.3/playwright/package.json
@@ -1,15 +1,22 @@
 {
   "name": "jsaqa_3_2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "playwright"
+    "test": "playwright test",
+    "br_test":"playwright screenshot"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.12.3",
-    "playwright": "^1.12.3"
-  }
+    "@playwright/test": "^1.24.2",
+    "playwright": "^1.24.2"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "playwright-core": "^1.24.2"
+  },
+  "description": ""
 }
