--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #
 /7.3/jest/node_modules
 /7.3/playwright/node_modules
+/7.3/playwright/user.js
+/7.3/playwright/screen/
 
 .vscode/*
 !.vscode/settings.json
