final variant for 7.4

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /7.3/playwright/user.js
 /7.3/playwright/screen/
 
+/7.4/puppeteer/node_modules
+
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
