--- a/7.5/puppeteer-2/package.json
+++ b/7.5/puppeteer-2/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.3.1",
-    "jest-puppeteer": "^6.0.0",
-    "puppeteer": "^13.3.2",
     "chai": "^4.3.4",
-    "cucumber": "^7.0.0-rc.0"
+    "cucumber": "^6.0.7",
+    "jest": "^27.5.1",
+    "jest-puppeteer": "^6.1.1",
+    "puppeteer": "^13.7.0"
   }
 }
