--- a/7.5/puppeteer-2/package.json
+++ b/7.5/puppeteer-2/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "cucumber": "cucumber-js"
+    "cucu": "cucumber-js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.3.4",
-    "cucumber": "^6.0.7",
     "jest": "^27.5.1",
     "jest-puppeteer": "^6.1.1",
     "puppeteer": "^13.7.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "cucumber": "^6.0.7"
   }
 }
