--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,18 @@
 /7.7_1/node_modules
 /7.7_1/cypress/node_modules
 /7.7_1/cypress/e2e
-/7.7_1/cypress/video
+/7.7_1/cypress/video/
 /7.7_1/package-lock.json
 /7.7_1/cypress/fixtures/example.json
+
+/7.7_2/node_modules
+/7.7_2/cypress/node_modules
+/7.7_2/cypress/fixtures/example.json
+/7.7_2/cypress/e2e
+/7.7_2/cypress/video
+/7.7_2/package-lock.json
+
+/booksApp
 
 .vscode/*
 !.vscode/settings.json
